--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ package:
   services:
     - docker:dind
   before_script:
-    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER --password-stdin < "$DOCKER_HUB_PASSWORD"
+    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
   script:
     - docker build -t $IMAGE_NAME
     - docker push $IMAGE_NAME
@@ -32,7 +32,7 @@ deploy:
   tags:
     - mood_backend
   before_script:
-    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER -password-stdin < "$DOCKER_HUB_PASSWORD"
+    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER --password-stdin < "$DOCKER_HUB_PASSWORD"
   script:
     - docker stop $CONTAINER_NAME || true
     - docker rm $CONTAINER_NAME || true
