--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ package:
   before_script:
     - docker login $CI_REGISTRY -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
   script:
-    - docker build -t $IMAGE_NAME
+    - docker build -t $IMAGE_NAME .
     - docker push $IMAGE_NAME
   after_script:
     - docker logout
