--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ package:
   services:
     - docker:dind
   before_script:
+    - cat /etc/resolv.conf
+    - cat /etc/hosts
     - docker login $CI_REGISTRY -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
   script:
     - docker build -t $IMAGE_NAME .
