--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,7 @@ package:
   services:
     - docker:dind
   before_script:
-    - cat /etc/resolv.conf
-    - cat /etc/hosts
-    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+    - docker login $CI_REGISTRY -u $DOCKER_HUB_USER --password-stdin < $DOCKER_HUB_PASSWORD
   script:
     - docker build -t $IMAGE_NAME .
     - docker push $IMAGE_NAME
