[:construction_worker:] build: change linux image
- amazonlinux -> ubuntu

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: amazonlinux:latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.1
       - uses: actions/setup-java@v4.2.1
