[:construction_worker:] build: change project name

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,4 +39,4 @@ jobs:
           SPRING_PROFILES_ACTIVE: build
 
       - name: Build with jib
-        run: ./gradlew api:jib
+        run: ./gradlew jib
