--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,8 +30,6 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Docker build & push to prod
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build project
         run: ./gradlew bootJar
@@ -39,4 +37,6 @@ jobs:
           SPRING_PROFILES_ACTIVE: build
 
       - name: Build with jib
-        run: ./gradlew jib
+        run: ./gradlew jib\
+          -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }}
+          -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }}
