--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Docker build & push to prod
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
       - name: build project
         run: ./gradlew bootJar
         env:
