[:construction_worker:] build: without docker login

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,16 +31,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Docker build & push to prod
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build project
-        run: ./gradlew bootJar
-        env:
-          SPRING_PROFILES_ACTIVE: build
-
       - name: Build with jib
         run: | 
           ./gradlew jib \
           -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
-          -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }}
+          -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} \
+          -Djib.to.image=${{ secrets.DOCKER_IAMGE }}
