[:construction_worker:] build: codeDeploy

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,6 +18,13 @@ jobs:
           distribution: 'semeru'
           java-version: '21'
 
+      - name: AWS configure credentials
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+
       - name: Cache
         uses: actions/cache@v4.0.2
         with:
@@ -36,4 +43,31 @@ jobs:
           ./gradlew jib \
           -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
           -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} \
-          -Djib.to.image=${{ secrets.DOCKER_IAMGE }}
+          -Djib.to.image=${{ secrets.DOCKER_IMAGE }}
+
+
+      - name: build docker file and setting deploy files
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          mkdir scripts
+          touch scripts/deploy.sh
+          echo "docker login -u $DOCKER_USERNAME --password-stdin < $DOCKER_PASSWORD" >> scripts/deploy.sh
+          echo "docker pull $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
+          echo "docker run -p 8080:8080 -d --restart always --name mood-api $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
+
+      - name: Upload to S3
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          zip -r deploy-$IMAGE_TAG.zip ./scripts appspec.yml
+          aws s3 cp --region ap-northeast-2 --acl private ./deploy-$IMAGE_TAG.zip s3://${{ secrets.CODEDEPLOY_BUCKET }}
+
+      - name: Deploy with AWS CodeDeploy
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: aws deploy create-deployment
+          --application-name ${{ secrets.CODEDEPLOY_NAME }}
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --deployment-group-name ${{ secrets.CODEDEPLOY_GROUP_NAME }}
+          --s3-location bucket=${{ secrets.CODEDEPLOY_BUCKET }},bundleType=zip,key=deploy-$IMAGE_TAG.zip
