--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev
 
 permissions:
   contents: read
@@ -17,6 +18,12 @@ jobs:
         with:
           distribution: 'semeru'
           java-version: '21'
+
+      - uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_API_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_API_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Cache
         uses: actions/cache@v4.0.2
@@ -47,14 +54,6 @@ jobs:
           echo "docker login -u $DOCKER_USERNAME --password-stdin < $DOCKER_PASSWORD" >> scripts/deploy.sh
           echo "docker pull $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
           echo "docker run -p 8080:8080 -d --restart always --name mood-api $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
-
-
-      - name: AWS configure credentials
-        uses: aws-actions/configure-aws-credentials@v4.0.2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_API_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_API_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
         env:
