--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,6 +48,9 @@ jobs:
       - name: build docker file and setting deploy files
         env:
           IMAGE_TAG: ${{ github.sha }}
+          DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE }}
+          DOCKER_USERNAME: ${{ DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ DOCKER_PASSWORD }}
         run: |
           touch scripts/deploy.sh
           echo "docker login -u $DOCKER_USERNAME --password-stdin < $DOCKER_PASSWORD" >> scripts/deploy.sh
