[:construction_worker:] build: codeDeploy
- 스크립트 실행

--- a/scripts/appspec.yml
+++ b/scripts/appspec.yml
@@ -11,3 +11,8 @@ permissions:
     group: ec2-user
     mode: 755
 
+hooks:
+  AfterInstall:
+    - location: scripts/deploy.sh
+      timeout: 60
+      runas: ec2-user
