--- a/scripts/appspec.yml
+++ b/scripts/appspec.yml
@@ -13,6 +13,6 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: /home/ec2-user/codedeploy/deploy.sh
       timeout: 60
       runas: ec2-user
