--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,4 +67,8 @@ jobs:
       - name: Deploy with AWS CodeDeploy
         env:
           IMAGE_TAG: ${{ github.sha }}
-        run: aws deploy create-deployment application-name ${{ secrets.CODEDEPLOY_NAME }} deployment-config-name CodeDeployDefault.AllAtOnce deployment-group-name ${{ secrets.CODEDEPLOY_GROUP_NAME }} s3-location bucket=${{ secrets.CODEDEPLOY_BUCKET }},bundleType=zip,key=deploy-$IMAGE_TAG.zip
+        run: aws deploy create-deployment \
+          --application-name ${{ secrets.CODEDEPLOY_NAME }} \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --deployment-group-name ${{ secrets.CODEDEPLOY_GROUP_NAME }} \
+          --s3-location bucket=${{ secrets.CODEDEPLOY_BUCKET }},bundleType=zip,key=deploy-$IMAGE_TAG.zip
