--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Deploy with AWS CodeDeploy
         env:
           IMAGE_TAG: ${{ github.sha }}
-        run: aws deploy create-deployment \
+        run: |
+          aws deploy create-deployment \
           --application-name ${{ secrets.CODEDEPLOY_NAME }} \
           --deployment-config-name CodeDeployDefault.AllAtOnce \
           --deployment-group-name ${{ secrets.CODEDEPLOY_GROUP_NAME }} \
