[:construction_worker:] build: codeDeploy
- docker login 제거

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,7 +43,7 @@ jobs:
           ./gradlew jib \
           -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
           -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} \
-          -Djib.to.image=${{ secrets.DOCKER_IMAGE }}
+          -Djib.to.image=${{ secrets.DOCKER_IMAGE }} \
           -Djib.to.tags=${{ github.sha }}
 
       - name: build docker file and setting deploy files
