[:construction_worker:] build: codeDeploy
- 실행중인 컨테이너 중지 후 재시작
- 무중단 배포 방안 필요

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,6 +52,8 @@ jobs:
           DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE }}
         run: |
           touch scripts/deploy.sh
+          echo "docker stop mood-api" >> scripts/deploy.sh
+          echo "docker rm mood-api" >> scripts/deploy.sh
           echo "docker pull $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
           echo "docker run -p 8080:8080 -d --restart always --name mood-api $DOCKER_IMAGE:$IMAGE_TAG" >> scripts/deploy.sh
 
